# SoundSage

./: .gitignore  README.md  pyproject.toml
src/backend/models/: rating_predictor.py
src/backend/spotify/: authentication.py  playlists.py
src/frontend/: app.py
src/frontend/static/js/: index.js
src/frontend/templates/: base.jinja2  home.jinja2
src/frontend/views/: home.py
